--- a/src/WRA.Umbraco.Web/Views/SubCategoryPage.cshtml
+++ b/src/WRA.Umbraco.Web/Views/SubCategoryPage.cshtml
@@ -46,9 +46,12 @@
 
 @await Html.PartialAsync("blockgrid/default", sectionsTop)
 
-@if (Model.Parent.Name == "Continuing Education")
+@* @if (Model.Parent?.Name == "Continuing Education")
+{ *@
+
+@if (Model.ProductBundles.Any())
 {
-    <div class="container my-4 my-lg-6" style="border: solid 6px red;">
+    <div class="container my-4 my-lg-6">
         <h2 class="js-listings-title h3 pt-4 mt-4 mt-lg-8 border-top border-medium mb-4">Course Bundle</h2>
         <div>
             @foreach (var courseBundle in Model.ProductBundles)
@@ -65,7 +68,9 @@
             }
         </div>
     </div>
-}
+    }
+
+@* } *@
 
 <div class="container my-4 my-lg-6">
     <h2 class="js-listings-title h3 pt-4 mt-4 mt-lg-8 border-top border-medium mb-4">
@@ -81,30 +86,27 @@
         {
             <text>Products</text>
         }
-        @if(Model.Products.Any()){
-            @foreach(var product in Model.Products)
-            {
-                <div class="col-md-6 col-lg-4">
-                    @* lets make a parial? *@
-                    @* @await Html.PartialAsync("product-card", product) *@
-                    <div class="card card--product">
-                        <div class="card-body">
-                            <h3 class="h5 card-title">@product.Name</h3>
-                            <p class="card-text">@product.ShortDescription</p>
-                            <a href="@product.Url()" class="btn btn-primary">View Product</a>
-                        </div>
-                    </div>
-                </div>
-            }
-        }
     </h2>
     <div class="js-taxonomy-container" hidden>
-        @* <label for="collection-filter" class="d-block text-uppercase font-family-3 fw-normal mb-2">@Model.TaxonomyTypeLabel Type</label> *@
-        <select id="collection-filter" class="js-taxonomy-filter form-select d-inline-block w-auto mb-4 mb-lg-6">
-        </select>
+        <label for="collection-filter" class="d-block text-uppercase font-family-3 fw-normal mb-2">@Model.TaxonomyTypeLabel Type</label>
+        <select id="collection-filter" class="js-taxonomy-filter form-select d-inline-block w-auto mb-4 mb-lg-6"></select>
     </div>
     <div class="position-relative" style="min-height: 350px;">
         <div class="js-product-collection row align-items-md-stretch g-4">
+        @*  LOAD ON SERVER SIDE TOO?
+            @if(Model.Products.Any()){
+            @foreach(var product in Model.Products)
+            {
+
+                <div class="card card--product">
+                    <div class="card-body">
+                        <h3 class="h5 card-title">@product.Name</h3>
+                        <p class="card-text">@product.ShortDescription</p>
+                        <a href="@product.Url()" class="btn btn-primary">View Product</a>
+                    </div>
+                </div>
+            }
+        } *@
         </div>
         <div class="js-results-loader search-loading" title="Please wait, loading.">
             <div class="lds-ring"><div></div><div></div><div></div><div></div></div>
