--- a/src/WRA.Umbraco.Web/Views/BundlesPage.cshtml
+++ b/src/WRA.Umbraco.Web/Views/BundlesPage.cshtml
@@ -49,7 +49,7 @@
                                 @* <p class="d-inline-block mb-4 px-2 py-1 bg-light fw-semibold fs-sm text-uppercase">On Demand</p> *@
                                 <h3 class="fs-lg text-capitalize fw-semibold mb-4">@courseBundle.Name</h3>
                                 <div class="d-flex flex-row align-self-stretch mt-5 mt-7">
-                                    <a href="@courseBundle.Url()" id="view-product" class="btn btn-primary border-0">View Product</a>
+                                    <a href="@courseBundle.Url()" id="view-product" class="btn btn-primary border-0">View Bundle</a>
                                     <div class="ps-4">
                                         <div class="d-block mb-1">
                                             @if (courseBundle.HasValue("price"))
