--- a/src/WRA.Umbraco.Web/Views/CategoriesPage.cshtml
+++ b/src/WRA.Umbraco.Web/Views/CategoriesPage.cshtml
@@ -1,10 +1,57 @@
 ﻿@using WRA.Umbraco.Models;
+@using WRA.Umbraco.Services;
+@using WRA.Umbraco;
+@using System.Linq;
+@using Umbraco.Commerce.Extensions;
+@using Umbraco.Cms.Core.Models.Blocks
+@using ContentModels = WRA.Umbraco.Models;
+
 @inherits Umbraco.Cms.Web.Common.Views.UmbracoViewPage<CategoriesPage>
+
 @{
     Layout = "~/Views/_Layout.cshtml";
+
+    var sections = Model.Value<IEnumerable<BlockGridItem>>("blockContent");
+    var productCategories = Model.Children.Where(p => p.IsVisible() && p.IsPublished() && p.Children.Count() > 0).OrderBy(p => p.Name);
 }
 
-@* @await Html.PartialAsync("Intro") *@
+<header class="page-header page-header--no-accent">
+    <div class="container">
+        <div class="container--sm">
+            <h1 class="mb-0">@Model.Name</h1>
+        </div>
+    </div>
+</header>
+<div class="text-bg-secondary">
+    <div class="py-2">
+        @await Html.PartialAsync("_breadcrumbsProducts", new ViewDataDictionary(this.ViewData) { { "CssClass", "breadcrumbs--light" } })
+    </div>
+</div>
 
-<h1>Categories Page</h1>
-@await Html.PartialAsync("ProductGroupList", Model.Children.OfType<IProductGroup>())
+@await Html.PartialAsync("blockgrid/default", sections)
+
+<div class="d-block py-4 py-lg-6"></div>
+<div class="container">
+    <div class="row g-4">
+        @foreach (var productGroup in productCategories)
+        {
+            <div class="col-md-4">
+                <div class="block-mini-card mini-card p-2 p-md-4 pb-lg-0 d-flex flex-column">
+                    <h3 class="mini-card__headline h5 mb-4 px-2 px-md-0 pt-4 pt-md-0">@productGroup.Name</h3>
+                    @if (productGroup.HasProperty("description"))
+                    {
+                        <p class="px-2 px-md-0">@productGroup?.GetProperty("description")?.GetValue()</p>
+                    }
+                    <a href="@productGroup?.Url()" class="mini-card__link fs-normal mt-auto stretched-link text-decoration-none fw-bold">
+                        Views Offerings
+                        <svg width="17" height="16" viewBox="0 0 17 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M0.82077 8L12.0313 8" stroke="#2560B9" stroke-width="1.37143" stroke-linecap="round" stroke-linejoin="round" />
+                            <path d="M8.51727 4L12.5173 8L8.51727 12" stroke="#2560B9" stroke-width="1.37143" stroke-linecap="round" stroke-linejoin="round" />
+                        </svg>
+                    </a>
+                </div>
+            </div>
+        }
+    </div>
+</div>
+<div class="d-block py-4 py-lg-6"></div>
