--- a/src/WRA.Umbraco.Web/Views/CheckoutConfirmationPage.cshtml
+++ b/src/WRA.Umbraco.Web/Views/CheckoutConfirmationPage.cshtml
@@ -3,11 +3,16 @@
     Layout = "CheckoutStepPage.cshtml";
 }
 
-    <div class="border border-gray-300 p-6 rounded mb-8 text-center">
-        <span class="inline-flex items-center justify-center text-6xl border-2 border-green-500 rounded-full mb-4 w-24 h-24"><i class="fa fa-check text-green-500"></i></span>
-        <h3 class="text-xl font-medium mb-4">Thank you for your order #@(Model.Order.OrderNumber ?? Model.Order.CartNumber)</h3>
-        <p class="mb-4">A confirmation email has been sent to <strong>@(Model.Order.CustomerInfo.Email)</strong></p>
-        <p><a href="/" class="inline-block text-white px-4 py-4 rounded hover:bg-gray-900">Return to Store</a></p>
-    </div>
+<div class="px-4 py-3 border rounded">
+    <p>Your order is confirmed.</p>
+    <p style="color: #696f78;">You'll receive a confirmation email with your order number shortly.</p>
+</div>
 
-<partial name="Commerce/OrderInformationSummary" />
+@*<div class="border border-gray-300 p-6 rounded mb-8 text-center">
+    <span class="inline-flex items-center justify-center text-6xl border-2 border-green-500 rounded-full mb-4 w-24 h-24"><i class="fa fa-check text-green-500"></i></span>
+    <h3 class="text-xl font-medium mb-4">Thank you for your order #@(Model.Order.OrderNumber ?? Model.Order.CartNumber)</h3>
+    <p class="mb-4">A confirmation email has been sent to <strong>@(Model.Order.CustomerInfo.Email)</strong></p>
+    <p><a href="/" class="inline-block text-white px-4 py-4 rounded hover:bg-gray-900">Return to Store</a></p>
+</div>
+
+<partial name="Commerce/OrderInformationSummary" />*@
