--- a/src/WRA.Umbraco.Web/Views/CollectionPage.cshtml
+++ b/src/WRA.Umbraco.Web/Views/CollectionPage.cshtml
@@ -45,11 +45,12 @@
                     @Model.Name
                 }
             </h1>
+            CollectionsPage.chtml -- TO BE REMOVED?
         </div>
     </div>
 </header>
 
-<div class="text-bg-secondary pt-1 pb-5">
+@* <div class="text-bg-secondary pt-1 pb-5">
     <div class="text-light">
         @await Html.PartialAsync("_breadcrumbsProducts", new ViewDataDictionary(this.ViewData) { { "CssClass", "breadcrumbs--light" }, { "CurrentName", (checkCategory.Count() != 0 ? checkCategory.FirstOrDefault().Name : string.Empty) } })
     </div>
@@ -62,7 +63,7 @@
             }
         </select>
     </div>
-</div>
+</div> *@
 
 @await Html.PartialAsync("blockgrid/default", sections)
 
@@ -97,7 +98,7 @@
         </div>
     } *@
 
-    <h2 class="js-listings-title h3 pt-4 mt-4 mt-lg-8 border-top border-medium mb-4">Individual Classes</h2>
+@*     <h2 class="js-listings-title h3 pt-4 mt-4 mt-lg-8 border-top border-medium mb-4">Individual Classes</h2>
 
     <div class="js-collection-subcategory-container" hidden>
         <label for="collection-filter" class="d-block text-uppercase font-family-3 fw-normal mb-2">Course Type</label>
@@ -106,13 +107,12 @@
     </div>
     <div class="position-relative" style="min-height: 350px;">
         <div class="js-product-collection row align-items-md-stretch g-4">
-            @* "The space between our wicked lies is, Where we hope to keep safe from pain" *@
         </div>
         <div class="js-results-loader search-loading" title="Please wait, loading.">
             <div class="lds-ring"><div></div><div></div><div></div><div></div></div>
         </div>
-    </div>
+    </div> 
 
-</div>
+</div>*@
 
 
