--- a/src/WRA.Umbraco.Web/wwwroot/css/src/global.scss
+++ b/src/WRA.Umbraco.Web/wwwroot/css/src/global.scss
@@ -33,6 +33,7 @@
 @import 'components/pagination';
 @import 'components/quantity-selector';
 @import 'components/modal';
+@import 'components/mywra';
 
 @import 'blocks/feature-breaker';
 @import 'blocks/layouts';
