Deployment 0397c400-1725-4e34-8a1f-929e9ccb3d33: Run number 710

--- a/src/WRA.Umbraco.Web/wwwroot/css/src/_umbraco-editors.scss
+++ b/src/WRA.Umbraco.Web/wwwroot/css/src/_umbraco-editors.scss
@@ -13,3 +13,48 @@
 .block-col {
     display: block;
 }
+
+.screenshot-block {
+    position: relative;
+
+    img {
+        max-width: 100%;
+        height: auto;
+    }
+
+    &:hover {
+        .screenshot-block-overlay {
+            background-color: rgba(0, 0, 0, 0.1);
+        }
+
+        .screenshot-block-label {
+            opacity: 1;
+        }
+    }
+}
+
+.screenshot-block-overlay {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-color: transparent;
+    transition: background-color 250ms;
+}
+
+.screenshot-block-label {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 1rem 1.25rem;
+    border-radius: 0.25rem;
+    background-color: black;
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: 700;
+    color: white;
+    opacity: 0;
+    transition: opacity 250ms;
+}
