Deployment cda3a86b-950b-435e-b11c-5bd6c33afe41: Run number 717

--- a/src/WRA.Umbraco.Web/Views/BundlePage.cshtml
+++ b/src/WRA.Umbraco.Web/Views/BundlePage.cshtml
@@ -70,7 +70,7 @@
                                 </label>
                                 @if (bundleItem.Product.HasProperty("ShortDescription"))
                                 {
-                                    <button class="js-bundle-pop-details btn btn-secondary btn-sm w-50 py-3" aria-controls="@(bundleItem.Product.Id)moreDetails">View Details</button>
+                                    <button class="js-pop-btn btn btn-secondary btn-sm w-50 py-3" aria-controls="@(bundleItem.Product.Id)moreDetails">View Details</button>
                                 }
                             </div>
                             @if (bundleItem.Product.HasProperty("ShortDescription"))
