--- a/src/WRA.Umbraco.Web/wwwroot/css/src/_typography.scss
+++ b/src/WRA.Umbraco.Web/wwwroot/css/src/_typography.scss
@@ -202,3 +202,9 @@ a.link-hover-inverse {
         text-decoration: none;
     }
 }
+
+.text-link {
+    @extend a;
+    border: none;
+    background: transparent;
+}
