--- a/src/WRA.Umbraco.Web/Views/CategoryPage.cshtml
+++ b/src/WRA.Umbraco.Web/Views/CategoryPage.cshtml
@@ -11,8 +11,7 @@
     Layout = "~/Views/_Layout.cshtml";
     var sections = Model.Value<IEnumerable<BlockGridItem>>("sections");
 
-    var productSubcategories = Model.Children.Where(p => p.IsVisible()).OrderBy(p => p.Name);
-
+    var productSubcategories = Model.Children.Where(p => p.IsVisible() && p.IsPublished() && p.Value<bool>("hideSubcategory") != true).OrderBy(p => p.Name);
 }
 
 <header class="page-header page-header--no-accent">
