--- a/src/WRA.Umbraco.Web/Views/SubCategoryPage.cshtml
+++ b/src/WRA.Umbraco.Web/Views/SubCategoryPage.cshtml
@@ -13,7 +13,7 @@
     var sectionsTop = Model.Value<IEnumerable<BlockGridItem>>("sectionsTop");
     var sectionsBottom = Model.Value<IEnumerable<BlockGridItem>>("sectionsBottom");
    
-    IEnumerable<IPublishedContent> siblingSubcategories = Model.SiblingsAndSelf().Where(x => x.IsVisible()).OrderBy(p => p.Name);
+    IEnumerable<IPublishedContent> siblingSubcategories = Model.SiblingsAndSelf().Where(x => x.IsVisible() && x.IsPublished() && x.Value<bool>("hideSubcategory") != true).OrderBy(p => p.Name);
     
     var currency = Model.GetStore().BaseCurrencyId ?? Guid.Empty;
 }
