Deployment 710f3423-4539-4d21-a487-df56f377f282: Run number 719

--- a/src/WRA.Umbraco.Web/Views/SubCategoryPage.cshtml
+++ b/src/WRA.Umbraco.Web/Views/SubCategoryPage.cshtml
@@ -50,7 +50,7 @@
 @await Html.PartialAsync("blockgrid/default", sectionsTop)
 
 
-@if (Model.ProductBundles.Any() && @Model.Parent?.Name != "Professional Development")
+@if (Model.ProductBundles.Any())
 {
     int creditHours = 0;
 
